.cap/logs/1782660705-43094.log
== stdout ==

== stderr ==
     Locking 6 packages to latest compatible versions
      Adding bit-set v0.8.0
      Adding bit-vec v0.8.0
      Adding quick-error v1.2.3
      Adding rusty-fork v0.3.1
      Adding tempfile v3.27.0
      Adding wait-timeout v0.2.1
   Compiling rustix v1.1.4
   Compiling getrandom v0.3.4
   Compiling errno v0.3.14
   Compiling once_cell v1.21.4
   Compiling wait-timeout v0.2.1
   Compiling ppv-lite86 v0.2.21
   Compiling regex-automata v0.4.14
   Compiling quick-error v1.2.3
   Compiling bit-vec v0.8.0
   Compiling rgk-receipt v0.1.0 (/Users/arthur/RustroverProjects/rgk/crates/rgk-receipt)
   Compiling unarray v0.1.4
   Compiling rand_core v0.9.5
   Compiling rgk-covenant v0.1.0 (/Users/arthur/RustroverProjects/rgk/crates/rgk-covenant)
   Compiling bit-set v0.8.0
   Compiling rand v0.9.4
   Compiling rand_xorshift v0.4.0
   Compiling rand_chacha v0.9.0
   Compiling rgk-indexer v0.1.0 (/Users/arthur/RustroverProjects/rgk/crates/rgk-indexer)
   Compiling regex v1.12.4
   Compiling criterion v0.7.0
   Compiling tempfile v3.27.0
   Compiling rusty-fork v0.3.1
   Compiling proptest v1.11.0
error[E0382]: borrow of moved value: `receipt`
   --> crates/rgk-receipt/src/lib.rs:496:52
    |
490 |             let (receipt, id, bytes) = ReceiptBuilder::build(&input).expect("build receipt");
    |                  ------- move occurs because `receipt` has type `rgk_core::RgkReceipt`, which does not implement the `Copy` trait
...
495 |             prop_assert_eq!(decoded, receipt);
    |                                      ------- value moved here
496 |             prop_assert_eq!(id, receipt_commitment(&receipt));
    |                                                    ^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
495 |             prop_assert_eq!(decoded, receipt.clone());
    |                                             ++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `rgk-receipt` (lib test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0382]: use of moved value: `next`
   --> crates/rgk-covenant/src/lib.rs:777:25
    |
766 |                 let next = state.advance(digest, replay_marker).expect("advance");
    |                     ---- move occurs because `next` has type `CovenantState`, which does not implement the `Copy` trait
...
775 |                 prop_assert_eq!(decoded, next);
    |                                          ---- value moved here
776 |
777 |                 state = next;
    |                         ^^^^ value used here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
775 |                 prop_assert_eq!(decoded, next.clone());
    |                                              ++++++++

error: could not compile `rgk-covenant` (lib test) due to 1 previous error
